src/css/challenge-detail-software.css
/* ... */
.challenge-detail .tabNav {
    padding-top: 0;
    padding-bottom: 10px;
    clear: both;
    overflow: hidden;
}

.challenge-detail .tabNav ul {
    padding: 0;
    margin-left: -10px;
}

.challenge-detail .tabNav ul .link {
    margin-left: 10px;
}

.challenge-detail .tabNav li {
    float: left;
    border-left: 1px solid #D0D0D1;
    height: 16px;
    font-size: 16px;
    line-height: 18px;
}

.challenge-detail .tabNav li:first-child {
    border-left: 0;
}

.challenge-detail .tabNav .link {
    margin: 0 10px;
}

.challenge-detail .tabNav .link.active,
.challenge-detail .tabNav .link.active:hover {
    color: #666;
    cursor: default;

}

.firstTabNav ul {
    width: 236px;
}

.secondTabNav ul {
    width: 180px;
}

.challenge-detail .tableWrap .final-submission-guidelines,
.challenge-detail .tableWrap .final-submission-guidelines p,
.challenge-detail .tableWrap .final-submission-guidelines li {
    font-weight: normal;
    color: rgb(51, 51, 51);
    font-size: 14px;
    font-family: "Sofia Pro", "Merriweather Sans", Helvetica, Arial, sans-serif;
    line-height: 22px;
}

.challenge-detail .tableWrap h3 {
    color: #00aeff;
    font-size: 16px;
    line-height: 22px;
    font-weight: bold;
    margin-bottom: 6px;
    margin-top: 20px;
}

h1.center {
  margin-top: 10px;
  text-align: center;
}

.challenge-detail.develop .tableWrap h3 {
    color: #228400;
}

.challenge-detail .tableWrap h1, .challenge-detail .tableWrap h2,
.challenge-detail .tableWrap h3, .challenge-detail .tableWrap h4,
.challenge-detail .tableWrap h5, .challenge-detail .tableWrap h6 {
    color: #000;
    font-size: 16px;
    line-height: 22px;
    font-weight: 500;
    margin-bottom: 6px;
    margin-top: 20px;
}

.challenge-detail .tableWrap h2 {
    color: #ed1c24;
}

.challenge-detail .tableWrap h4,
.challenge-detail .tableWrap h5, .challenge-detail .tableWrap h6 {
    font-size: 14px;
}

.challenge-detail .tableWrap, .challenge-detail .tableWrap p {
    margin-bottom: 6px;
    font-family: 'Merriweather Sans';
    font-size: 14px;
    line-height: 1.4;
    color: #797979;
    font-weight: lighter;
}

.challenge-detail .tableWrap strong {
    color: #000;
}

.challenge-detail .tableWrap ul {
    list-style: initial;
    margin-left: 16px;
    padding: 0;
    margin-bottom: 10px;
    width: auto;
    color: #797979;
}

.challenge-detail .tableWrap ul li {
    float: none;
    height: auto;
    margin-bottom: 6px;
    font-family: 'Merriweather Sans';
    font-weight: 300;
    font-size: 14px;
    line-height: 1.4;
    border: none;
    color: #797979;
}

.challenge-detail .tableWrap ul li:last-child {
    margin-bottom: 0;
}

/* Issue ID: I-114272 - Add style for ol and li */
.challenge-detail .tableWrap ol {
    margin-left: 16px;
    padding: 0px;
    margin-bottom: 10px;
    width: auto;
    color: #797979;
}

.challenge-detail .tableWrap ol li {
    float: none;
	list-style-type: decimal;
    list-style-position: outside;
    font-family: 'Merriweather Sans';
    font-weight: 300;
    font-size: 14px;
    line-height: 1.4;
    border: none;
    height: auto;
    padding-left: 0px;
    color: #797979;
    margin-bottom: 6px;
}

.challenge-detail .tableWrap ol li:last-child {
    margin-bottom: 0;
}

.challenge-detail .tableWrap p a {
    word-wrap: break-word;
}

.challenge-detail .tabNav {
    border-bottom: 1px solid #e7e7e7;
    margin-bottom: 10px;
}

.challenge-detail .tableWrap {
    padding-right: 20px;
}

.challenge-detail .currentTab-checkpoints .tableWrap,
.challenge-detail .currentTab-submissions .tableWrap,
.challenge-detail .currentTab-winner .tableWrap {
    padding-right: 0;
}

.challenge-detail .topRightTitle {
    position: static !important;
}

.challenge-detail .topRightTitleAlt {
    display: none;
}

.challenge-detail .currentTab-checkpoints .topRightTitleAlt {
    display: block;
}

.challenge-detail .topRightTitle a {
    font-size: 16px;
    height: 26px;
    line-height: 20px;
    float: right;
    clear: both;
    padding-left: 32px;
    background: url("../i/ico-contest-forum.png") no-repeat 0 0;
}

.challenge-detail .columnSideBar {
    display: block;
    clear: both;
    width: 100%;
    background: #f7f7f7;
    border: 1px solid #e1e1e1;
    margin-top: 26px;
}

.challenge-detail .columnSideBar .sidebar {
    display: block;
    overflow: hidden;
}

#rightTitleOnFull {
    display:none;
    position:absolute;
    top:-0px;
    right:0px;
    width:200px;
}
#rightTitleOnFull a{
    font-size: 16px;
    height: 26px;
    line-height:20px;
    float:right;
    clear:both;
    padding-left:32px;
    background: url("../i/ico-contest-forum.png") no-repeat 0 0;
 }


.challenge-detail .columnSideBar .inner {
    padding: 10px 10px;
    border-bottom: 1px solid #e7e7e7;
}

.challenge-detail .columnSideBar .inner b {
    font-size: 14px;
}

.challenge-detail .columnSideBar .inner ul li {
    font-family: 'Merriweather Sans';
    font-weight: 300;
}

.challenge-detail .columnSideBar .inner ul li:last-child {
    margin-bottom: 10px;
}

.challenge-detail .columnSideBar .inner p {
    font-family: 'Merriweather Sans';
    font-weight: 300;
    font-size: 13px;
}

.challenge-detail .columnSideBar .inner p strong {
    font-family: 'Sofia Pro';
}

.challenge-detail .columnSideBar h3 {
    color: #000 !important;
    font-size: 14px;
    font-weight: 500;
    padding: 11px 10px;
    text-transform: uppercase;
}

.challenge-detail.develop .columnSideBar h3 {
    color: #228400;
}

/*.challenge-detail .columnSideBar ul{
	transform:none!important;
	transition:none!important;
	-webkit-transform:none!important;
	-webkit-transition:none!important;
	width:100%!important;
}*/

.challenge-detail .columnSideBar p strong {
    display: block;
    margin-top: 20px;
    font-size: 14px;
    color: #000;
}

.reviewStyle p {
    font-size: 13px;
    margin-bottom: 5px;
    display: block;
    width: 100% !important;
}
/* ... */

